Change the client to use java.net.http